Search boxes background colour change to light grey

--- a/src/ui/assets/styles/components/_leftSearchBox.scss
+++ b/src/ui/assets/styles/components/_leftSearchBox.scss
@@ -4,7 +4,7 @@
         padding-left: 8px;
         padding-right: 8px;
         font-weight:bold;
-        background: $grey-2;
+        background: $alt-color;
         width: 100%;
     }
 
