Search boxes title font size reduced

--- a/src/ui/component/LeftSearchBox.html
+++ b/src/ui/component/LeftSearchBox.html
@@ -4,7 +4,7 @@
         <div class="lpg-related-items form-group govuk-related-items--search leftSearchBox filter-toggle">
             <fieldset>
                 <legend>
-                    <h2 class="govuk-related-items__heading heading-medium">Learning type</h2>
+                    <h2 class="govuk-related-items__heading heading-small">Learning type</h2>
                 </legend>
                 {#each Object.entries($i18n('courseTypes')) as filter}
                     <div class="multiple-choice">
@@ -19,7 +19,7 @@
             <fieldset>
 
                 <legend>
-                    <h2 class="govuk-related-items__heading heading-medium">Cost</h2>
+                    <h2 class="govuk-related-items__heading heading-small">Cost</h2>
                 </legend>
 
                 <div class="multiple-choice">
@@ -32,7 +32,7 @@
         <div class="lpg-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle">
             <fieldset>
                 <legend>
-                    <h2 class="govuk-related-items__heading heading-medium">Your department</h2>
+                    <h2 class="govuk-related-items__heading heading-small">Your department</h2>
                 </legend>
                 {#each departments.yours as filter}
                 <div class="multiple-choice">
@@ -46,7 +46,7 @@
         <div class="lpg-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle">
             <fieldset>
                 <legend>
-                    <h2 class="govuk-related-items__heading heading-medium">Other departments</h2>
+                    <h2 class="govuk-related-items__heading heading-small">Other departments</h2>
                 </legend>
                 {#each departments.other as filter}
                 <div class="multiple-choice">
@@ -60,7 +60,7 @@
         <div class="lpg-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle">
             <fieldset>
                 <legend>
-                    <h2 class="govuk-related-items__heading heading-medium">Your areas of work</h2>
+                    <h2 class="govuk-related-items__heading heading-small">Your areas of work</h2>
                 </legend>
                 {#each areasOfWork.yours as filter}
                 <div class="multiple-choice">
@@ -74,7 +74,7 @@
         <div class="lpg-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle">
             <fieldset>
                 <legend>
-                    <h2 class="govuk-related-items__heading heading-medium">Other areas of work</h2>
+                    <h2 class="govuk-related-items__heading heading-small">Other areas of work</h2>
                 </legend>
                 {#each areasOfWork.other as filter}
                 <div class="multiple-choice">
@@ -88,7 +88,7 @@
         <div class="lpg-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle">
             <fieldset>
                 <legend>
-                    <h2 class="govuk-related-items__heading heading-medium">Your interests</h2>
+                    <h2 class="govuk-related-items__heading heading-small">Your interests</h2>
                 </legend>
                 {#each interests.yours as filter}
                 <div class="multiple-choice">
@@ -102,7 +102,7 @@
         <div class="lpg-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle">
             <fieldset>
                 <legend>
-                    <h2 class="govuk-related-items__heading heading-medium">Other interests</h2>
+                    <h2 class="govuk-related-items__heading heading-small">Other interests</h2>
                 </legend>
                 {#each interests.other as filter}
                 <div class="multiple-choice">
