Vertically centered text and arrowheads

--- a/src/ui/assets/styles/components/_leftSearchBox.scss
+++ b/src/ui/assets/styles/components/_leftSearchBox.scss
@@ -14,7 +14,6 @@ legend {
 		margin-top: 8px;
 
 		margin-bottom: 0px;
-		border-bottom: 1px solid $alt-color;
 		width: 100%;
 
         input {
@@ -37,6 +36,10 @@ legend {
 	.heading-small {
 		margin-top: 6px;
 	}
+}
+
+.filter-headings {
+	margin: 15px 0 12px 0;
 }
 
 .clear-filters {
