--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -7,7 +7,7 @@
 @import 'common/typography';
 
 @import 'utils/utils';
-
+@import 'components/back-button';
 @import 'components/banner';
 @import 'components/bar-rating';
 @import 'components/discite';
@@ -26,6 +26,7 @@
 @import 'components/results';
 @import 'components/booking';
 @import 'components/search';
+@import 'components/quiz';
 @import 'components/search-results';
 @import 'components/resource';
 @import 'components/badge';
@@ -84,6 +85,20 @@
 
 body {
 	position: relative;
+	min-height: 100vh;
+}
+.bottom-main {
+	padding-bottom: 400px;
+}
+
+@media (min-width: 641px) {
+	main {
+		font-size: 19px;
+		line-height: 1.31579;
+	}
+	.bottom-main {
+		padding-bottom: 320px;
+	}
 }
 
 body:not(.js-enabled) {
