--- a/src/ui/assets/styles/common/_variables.scss
+++ b/src/ui/assets/styles/common/_variables.scss
@@ -11,7 +11,7 @@ $proposition-border: #2e3133;
 // black header bar when used as copy colour.
 $proposition-active-nav: #af292e;
 $cs-red: #af292e;
-
+$font-color: #0b0c0c;
 $footer-background: $grey-3;
 $footer-border-top: #a1acb2;
 $alt-color: #dee0e2;
@@ -28,3 +28,4 @@ $white: #fff;
 $fonts-dir: '/assets/fonts/';
 $hint: #6f777b;
 $border: #bfc1c3;
+$alt-header-color: #9b9b9b;
