--- a/src/ui/component/Nav.html
+++ b/src/ui/component/Nav.html
@@ -17,12 +17,16 @@
                 <li><a href="/learning-record">Learning record</a></li>
             {/if}
         {/if}
-        {#if $req.originalUrl.includes("/profile")}
-            <li class="active"><a href="/profile">Profile</a></li>
-        {:else}
-            <li><a href="/profile">Profile</a></li>
-        {/if}
-       {#if $signedInUser.isAdmin()}
+       {#if $req.originalUrl.includes("/profile")}
+       <li class="active"><a href="/profile">Profile</a></li>
+       {:else}
+       <li><a href="/profile">Profile</a></li>
+       {/if}
+       {#if $req.originalUrl.includes("/skills")}
+       <li class="active"><a href="/skills">Skills</a></li>
+       {:else}
+       <li><a href="/skills">Skills</a></li>
+       {/if}{#if $signedInUser.isAdmin()}
        <li>
            <a href="{$config.LPG_MANAGEMENT_URL}/content-management/">Admin</a>
        </li>
