Results page: Added why, added correct answers, added styling

--- a/src/ui/assets/styles/components/_quiz.scss
+++ b/src/ui/assets/styles/components/_quiz.scss
@@ -83,6 +83,13 @@
     }
   }
 
+  .question-text {
+    float: left;
+    margin: 10px 0;
+    content: 'Show';
+    box-sizing: border-box;
+    width: 100%;
+  }
 
   .expand:checked ~ .question-contents {
     display: block;
