--- a/src/ui/assets/styles/common/_variables.scss
+++ b/src/ui/assets/styles/common/_variables.scss
@@ -20,6 +20,7 @@ $footer-link-hover: #171819;
 $footer-text: $footer-link;
 $optional-text: $footer-text;
 $flash-message: #005ea5;
+$govuk-link-hover-colour: #2b8cc4;
 
 $focus: #ffbf47;
 $grey: #aaa;
