--- a/src/ui/assets/styles/components/_quiz.scss
+++ b/src/ui/assets/styles/components/_quiz.scss
@@ -15,11 +15,11 @@
   left: -9999px;
 }
 
-.icon {
+.summary-icon {
   float: left;
   margin-top:12px;
   background-repeat: no-repeat;
-  background-position: left;
+  background-position: left 1px;
   background-size: contain;
   width: 22px;
   height: 22px;
@@ -55,7 +55,7 @@
   .heading-medium {
     float:left;
     max-width: 66%;
-    width: 66%;
+    width: 60%;
   }
 
 }
@@ -71,7 +71,15 @@
 
   .expand-label {
     float: right;
-    margin-top: 12px;
+    margin-top: 14px;
+    position: relative;
+    right: 20px;
+    color: $flash-message;
+    cursor: pointer;
+
+    &:hover {
+      color: $govuk-link-hover-colour
+    }
 
     &:before {
       content: 'Show';
@@ -79,7 +87,16 @@
 
     &:after
     {
-
+      content: ' ';
+      width: 20px;
+      height: 20px;
+      background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg width='16px' height='16px' viewBox='0 0 16 16' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cg id='Plus-and-Minus-icons' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cg id='Plus' fill='%230B0C0C' fill-rule='nonzero'%3E%3Crect id='Minus-Copy' x='0' y='6' width='16' height='4'%3E%3C/rect%3E%3Crect id='Minus-Copy-2' transform='translate(8.000000, 8.000000) rotate(90.000000) translate(-8.000000, -8.000000) ' x='0' y='6' width='16' height='4'%3E%3C/rect%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+      background-size: contain;
+      background-repeat: no-repeat;
+      display: inline-block;
+      margin-left: 10px;
+      position: absolute;
+      top: 3px;
     }
   }
 
@@ -99,6 +116,10 @@
     content: 'Hide';
   }
 
+  .expand:checked + .expand-label:after {
+    background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg width='16px' height='4px' viewBox='0 0 16 4' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cg id='Plus-and-Minus-icons' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Crect id='Minus' fill='%230B0C0C' fill-rule='nonzero' x='0' y='0' width='16' height='4'%3E%3C/rect%3E%3C/g%3E%3C/svg%3E");
+    top: 10px;
+  }
 }
 
 .dont-know {
