LC-227-no-modules-fallback-v2

--- a/src/ui/component/DisciteCourse.html
+++ b/src/ui/component/DisciteCourse.html
@@ -52,9 +52,11 @@
                         {/if}
                     </span>
                 </p>
+                {#if duration !== '-'}
                 <p class="discite__property-item no-margin"> <span>Duration: </span>
-                    <span class="lpg-course-duration">{duration}</span>
+                    <span class="lpg-course-duration">{duration ? duration : '-'}</span>
                 </p>
+                {/if}
             </div>
             <div class="discite__property-item discite__status--home">
                 <span class="badge badge--discite badge--info">{bookedModule.state ? $i18n(bookedModule.state) : ''}</span>
