LC-227-no-modules-fallback-v2

--- a/src/ui/component/DisciteCourse.html
+++ b/src/ui/component/DisciteCourse.html
@@ -54,7 +54,7 @@
                 </p>
                 {#if duration !== '-'}
                 <p class="discite__property-item no-margin"> <span>Duration: </span>
-                    <span class="lpg-course-duration">{duration ? duration : '-'}</span>
+                    <span class="lpg-course-duration">{duration}</span>
                 </p>
                 {/if}
             </div>
