--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -28,6 +28,7 @@
 @import 'components/search';
 @import 'components/quiz';
 @import 'components/search-results';
+@import 'components/skip-link';
 @import 'components/resource';
 @import 'components/badge';
 @import 'components/home-tile';
