--- a/src/ui/component/Page.html
+++ b/src/ui/component/Page.html
@@ -15,6 +15,7 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id={($config.GOOGLE_ANALYTICS_ID)}"></script> {@html $config.GOOGLE_ANALYTICS_CODE}
 </head>
 <body>
+    <SkipLink />
     <div id="global-cookie-message">
         <p>
             Civil Service Learning uses cookies to make the site simpler.
@@ -40,6 +41,7 @@
 <script>
 	import Layout from './Layout.html';
 	import Header from './Header.html';
+    import SkipLink from './SkipLink.html';
 
 	export default {
 		data() {
@@ -50,7 +52,7 @@
 		components: {
 			Layout,
 			Header,
-
+            SkipLink,
 		}
 	};
 </script>
