add missing legend nodes

--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -113,3 +113,7 @@ body:not(.js-enabled) {
 .form-group .panel-border-narrow {
 	float: initial !important;
 }
+
+.govuk-fieldset__legend--s {
+	margin-bottom: 20px;
+}
