fixed incorrect course id/type

--- a/src/ui/component/DisciteFeedback.html
+++ b/src/ui/component/DisciteFeedback.html
@@ -23,7 +23,7 @@
         {/if}
     </div>
     <div class="discite__action discite__action--module">
-        <a href="/learning-record/{course.id}/{module.id}/feedback?ignore=true">I do not want to leave feedback for 
+        <a href="/learning-record/{course.id}/{module.id}/feedback?ignore=true">I do not want to leave feedback
             <span class="visually-hidden">for 
                 {#if module.title}
                     {module.title}
