added new header

--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -114,6 +114,10 @@ body:not(.js-enabled) {
 	float: initial !important;
 }
 
+.font-weight-regular {
+	font-weight: normal;
+}
+
 .govuk-fieldset__legend--s {
 	margin-bottom: 20px;
 }
