fixed generic error messages for profile page

--- a/src/ui/assets/styles/common/_variables.scss
+++ b/src/ui/assets/styles/common/_variables.scss
@@ -22,7 +22,7 @@ $optional-text: $footer-text;
 $flash-message: #005ea5;
 $govuk-link-hover-colour: #2b8cc4;
 
-$focus: #ffbf47;
+$focus: #CC8500;
 $grey: #aaa;
 $light-grey: #f8f8f8;
 $white: #fff;
