fixed page width for organisations setup page

--- a/src/ui/component/ProfileEditForm.html
+++ b/src/ui/component/ProfileEditForm.html
@@ -1,4 +1,4 @@
-<form autocomplete="off" method="post" class="" action="/profile/{inputName}">
+<form autocomplete="off" method="post" action="/profile/{inputName}">
     {#if inputName === 'password'}
     <p>
         Password should be at least 8 characters long and contain at least one from 3 of the
