--- a/src/ui/assets/styles/common/_variables.scss
+++ b/src/ui/assets/styles/common/_variables.scss
@@ -21,8 +21,9 @@ $footer-text: $footer-link;
 $optional-text: $footer-text;
 $flash-message: #005ea5;
 $govuk-link-hover-colour: #2b8cc4;
+$gds-black: #0b0c0c;
 
-$focus: #CC8500;
+$focus: #fd0;
 $grey: #aaa;
 $light-grey: #f8f8f8;
 $white: #fff;
