--- a/src/ui/assets/styles/common/_global.scss
+++ b/src/ui/assets/styles/common/_global.scss
@@ -36,6 +36,29 @@ hr.clear {
 	list-style-position: inside;
 }
 
+a:focus {
+	background-color: $focus;
+	outline: 3px solid transparent;
+	box-shadow: 0 -2px $focus, 0 4px $gds-black;
+	text-decoration: none;
+}
+
+input:focus, textarea:focus, select:focus, button:focus, .button:focus {
+	outline: 3px solid $focus !important;
+	outline-offset: 0;
+}
+
+.multiple-choice [type=radio]:focus+label::before, .multiple-choice [type=checkbox]:focus+label::before {
+	-webkit-box-shadow: 0 0 0 4px $focus;
+	-moz-box-shadow: 0 0 0 4px $focus;
+	box-shadow: 0 0 0 4px $focus;
+}
+
+#global-header #logo:focus {
+	background-color: $focus;
+	outline: 3px solid $focus;
+}
+
 .aspect {
 	@include e(container) {
 		height: 0;
@@ -203,3 +226,4 @@ hr.clear {
 	border-top: 8px solid $cs-red;
 	padding: 0 10px 10px 10px;
 }
+
