fixed radio buttons and checkboxes

--- a/src/ui/assets/styles/components/_booking.scss
+++ b/src/ui/assets/styles/components/_booking.scss
@@ -221,6 +221,7 @@
 			position: absolute;
 			display: block;
 			content: 'Select';
+			padding-left: 6px;
 			width: 136px;
 			text-align: left;
 			height: 24px;
