--- a/src/ui/assets/styles/common/_global.scss
+++ b/src/ui/assets/styles/common/_global.scss
@@ -300,3 +300,8 @@ input.multiple-choice__input:checked + label::after {
 	width: 33px !important;;
 	height: 33px !important;;
 }
+
+.link--block {
+	width: auto;
+	display: inline-block;
+}
