added start-time and end-time to the list and also displays the dates in the home page (learning plan), Summary page and choose date page

--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -122,6 +122,13 @@ body:not(.js-enabled) {
 	margin-bottom: 20px;
 }
 
+.vertical-center {
+	margin: 0;
+	position: absolute;
+	top: 50%;
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+}
 .width-10 {
 	max-width: 23ex;
 }
