--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -129,6 +129,28 @@ body:not(.js-enabled) {
 	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
 }
-.width-10 {
+
+.summary-page .date-and-time-container .vertical-center {
+	margin: 0;
+	top: 50%;
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+}
+
+.summary-page .date-and-time-container {
+	display: inline-block;
+	width: 25%;
+}
+
+.summary-page .date-and-time-value-container{
+	display: inline-block;
+	width: 60%;
+}
+
+@media only screen and (max-width: 700px) {
+	.summary-page .date-and-time-value-container{
+		text-align: right;
+	}
+}.width-10 {
 	max-width: 23ex;
 }
