Cosmetic fixes and cancel link fix

--- a/src/ui/component/DisciteCourse.html
+++ b/src/ui/component/DisciteCourse.html
@@ -51,7 +51,7 @@
                         </li>
                     {/each}
                 </ul>
-                {#if bookedModule.state !== "Unregistered"}
+                {#if bookedModule.state !== "UNREGISTERED"}
                     <a class="discite__property-item" href="/book/{course.id}/{bookedModule.moduleId}/{bookedModule.eventId}/cancel">Cancel booking</a>
                 {/if}
             </div>
