--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -124,8 +124,8 @@ body:not(.js-enabled) {
 
 .vertical-center {
 	margin: 0;
+	padding-top: 15px;
 	position: absolute;
-	top: 50%;
 	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
 }
