LC-14 - accessibility changes - Fixed form label error.  Added legend for fieldset tag.

--- a/src/ui/component/TypeAhead.html
+++ b/src/ui/component/TypeAhead.html
@@ -1,8 +1,8 @@
 <label for="{inputName}">{label}</label>
 <p class="govuk-body hint no-margin">Start typing to find your organisation name</p>
-<select class="form-control type-ahead" id="{inputName}" name="{inputName}">
+<select class="form-control type-ahead" id="{inputName}" name="{inputName}" aria-labelledby="{inputName}">
  <option value=""></option>
     {#each options as option}
-        <option value="{option[0]}">{option[1]}</option>
+        <option label="{option}" value="{option[0]}">{option[1]}</option>
     {/each}
 </select>
